--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-src/main/resources/application-API-KEY.properties
+**/src/main/resources/application-API-KEY.properties
 
 ### STS ###
 .apt_generated
